[package]
name = "filmbot"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Rossoni <andrea dot ros.21 at murena dot io>"]
readme = "README.md"
repository = "https://github.com/andros21/filmbot"
homepage = "https://github.com/andros21/filmbot"
description = "a todo film bot"
keywords = ["todo", "film", "teloxide"]

[dependencies]
teloxide = { version = "0.12.2", features = [
   "macros",
   "native-tls",
   "ctrlc_handler",
   "sqlite-storage",
], default-features = false }
log = "0.4.27"
pretty_env_logger = "0.5.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
